# qtermwidget

./: .cirrus.yml  .clang-format  .gitattributes  .gitignore  .travis.yml  AUTHORS  CHANGELOG  CMakeLists.txt  Changelog  INSTALL  MANIFEST.in  README  README.md  TODO  lib.pri  qmltermwidget.pro  qtermwidget.pro  qtermwidget.spec  qtermwidget.ts  qtermwidget_ca.ts  qtermwidget_da.ts  qtermwidget_el.ts  qtermwidget_es.ts  qtermwidget_fr.ts  qtermwidget_hu.ts  qtermwidget_ja.ts  qtermwidget_lt.ts  qtermwidget_pl.ts  qtermwidget_pl_PL.ts  qtermwidget_pt.ts  qtermwidget_tr.ts  qtermwidget_zh_CN.ts  qtermwidget_zh_TW.ts  setup.py
.ci/: build.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: test.yml
QTermWidget/: __init__.py
cmake/: create_pkgconfig_file.cmake  qtermwidget4-config.cmake.in  qtermwidget4_use.cmake  qtermwidget5-config.cmake.in  qtermwidget5_use.cmake  qtermwidget6-config.cmake.in
docs/: configuration.md
example/: main.cpp
examples/: README
examples/cpp/: main.cpp
examples/cpp/RemoteTerm/: README.md  main.cpp  remoteterm.h
examples/pyqt/: main.py
lib/: BlockArray.cpp  BlockArray.h  CMakeLists.txt  Character.h  CharacterColor.h  ColorScheme.cpp  ColorScheme.h  ColorTables.h  DefaultTranslatorText.h  Emulation.cpp  Emulation.h  ExtendedDefaultTranslator.h  Filter.cpp  Filter.h  History.cpp  History.h  HistorySearch.cpp  HistorySearch.h  KeyboardTranslator.cpp  KeyboardTranslator.h  LineFont.h  ProcessInfo.cpp  Pty.cpp  Pty.h  README  Screen.cpp  Screen.h  ScreenWindow.cpp  ScreenWindow.h  SearchBar.cpp  SearchBar.h  Session.cpp  Session.h  ShellCommand.cpp  ShellCommand.h  TerminalCharacterDecoder.cpp  TerminalCharacterDecoder.h  TerminalDisplay.cpp  TerminalDisplay.h  Vt102Emulation.cpp  (+27 more)
lib/color-schemes/: Falcon.colorscheme  Nord.colorscheme  Tango.colorscheme  color-schemes.qrc  cool-retro-term.colorscheme
lib/designer/: qtermwidgetplugin.cpp  qtermwidgetplugin.h  qtermwidgetplugin.qrc
lib/kb-layouts/: default-backspace-fix.keytab  default.keytab
lib/kpty/: kptydevice.cpp  kptyprocess.h
lib/ptyqt/: conptyprocess.cpp  iptyprocess.cpp
lib/translations/: CMakeLists.txt  qtermwidget.ts  qtermwidget_ar.ts  qtermwidget_arn.ts  qtermwidget_ast.ts  qtermwidget_bg.ts  qtermwidget_ca.ts  qtermwidget_cs.ts  qtermwidget_cy.ts  qtermwidget_da.ts  qtermwidget_de.ts  qtermwidget_de_CH.ts  qtermwidget_el.ts  qtermwidget_en_GB.ts  qtermwidget_es.ts  qtermwidget_et.ts  qtermwidget_fi.ts  qtermwidget_fr.ts  qtermwidget_gl.ts  qtermwidget_he.ts  qtermwidget_hr.ts  qtermwidget_hu.ts  qtermwidget_it.ts  qtermwidget_ja.ts  qtermwidget_ka.ts  qtermwidget_kab.ts  qtermwidget_kk.ts  qtermwidget_ko.ts  qtermwidget_lg.ts  qtermwidget_lt.ts  qtermwidget_nb_NO.ts  qtermwidget_nl.ts  qtermwidget_oc.ts  qtermwidget_pl.ts  qtermwidget_pt.ts  qtermwidget_pt_BR.ts  qtermwidget_pt_PT.ts  qtermwidget_ru.ts  qtermwidget_si.ts  qtermwidget_sk.ts  (+5 more)
packaging/rpm/: qmltermwidget.spec
pyqt/: CMakeLists.txt  README.md  config-old.py  config.py  project.py  pyproject.toml  qtermwidget.sip  test.py
pyqt/sip/: qtermwidget.sip
pyqt4/: README  config.py  qtermwidget.sip  test.py
src/: CMakeLists.txt  QMLTermScrollbar.qml  ksession.cpp  ksession.h  main.cpp  qmldir  qmltermwidget_plugin.cpp  qmltermwidget_plugin.h  src.pro
test-app/: test-app.qml
